Adiciona painel administrativo de produtos no frontend
